test/library/standard/DateTime/timezoneAwarenessMismatch.5.good
timezoneAwarenessMismatch.chpl:50: error: both dateTimes must both be either naive or aware
