test/library/standard/DateTime/timezoneAwarenessMismatch.compopts
-stzCompareOperation=\"lt\"
-stzCompareOperation=\"gt\"
-stzCompareOperation=\"leq\"
-stzCompareOperation=\"geq\"
-stzCompareOperation=\"eq\"
-stzCompareOperation=\"neq\"
